# widget-code-input

./: .coveragerc  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CodeInputWidget.py  LICENSE.txt  MANIFEST.in  Procfile  README.md  RELEASE.md  Widget_demo.ipynb  __init__.py  appveyor.yml  codecov.yml  dev-requirements.txt  install.json  jsonlyreinstall.sh  package-lock.json  package.json  postBuild  pyproject.toml  pytest.ini  reinstall.sh  requirements.txt  setup.py  tsconfig.json  version_check.py  webpack.config.js  widget-code-input.json  widget_code_input.json
.github/workflows/: build.yml  release_and_publish.yml  release_and_publish.yml~  screenshot-comparison.yml  widget-test.yml
binder/: environment.yml
demo/: demo.ipynb
demos/: index.ipynb  projectile-inline.ipynb  projectile-notebook.ipynb  projectile.ipynb  showcase.ipynb  static-appearance-example.html
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
example/: example.ipynb
examples/: introduction.ipynb
js/: README.md  package.json  webpack.config.js  widget.js
js/lib/: embed.js  extension.js  index.js  labplugin.js  widget-code-input.js
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts
src/widget_code_input/: __init__.py  index.js  index.js~  styles.css  styles.css~  utils.py
src/widget_code_input/static/: index.js  styles.css
test/: test.py
widget_code_input/: CodeInputWidget.py  __init__.py  _frontend.py  _version.py  frontend.py  utils.py  widget_code_input.py
widget_code_input/nbextension/: __init__.py  extension.js
widget_code_input/nbextension/static/: extension.js
widget_code_input/tests/: conftest.py  test_example.py  test_nbextension_path.py  test_widget_code_input.py
