[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

    
[project]
name = "widget_code_input"
version = "4.0.10"
dependencies = ["anywidget>=0.9.1"]
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = [
  'jupyter',
  'jupyterlab',
  'widget',
  'anywidget',
  'osscar',
  'code_input',
  'code_editor'
]    

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab","bumpver>=2023"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/widget_code_input","widget_code_input"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/widget_code_input/static/*","widget_code_input/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/widget_code_input/static/index.js"]
skip-if-exists = ["src/widget_code_input/static/index.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"


[tool.bumpver]
current_version = "v4.0.10"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'version = "{pep440_version}"',
  'current_version = "{version}"',
]    